--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>FA4 project for user microservice</description>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.organization>vaibhav958</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
